melhorias template, banco de dados, arquivos iniciais gerenciar moradores

--- a/src/public/css/bottom.css
+++ b/src/public/css/bottom.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	background-color: rgba(20,20,20,1);
 	padding: 5px 14px 5px 5px;
-	margin: -10px -9px auto -9px;
+	margin: 0px;
 }
 
 
