--- a/src/pages/moradores/editar/morador.css
+++ b/src/pages/moradores/editar/morador.css
@@ -2,10 +2,14 @@ body {
 	//background-color: rgba(0, 0, 0, 0.1);
 }
 
+#aux_nome, #aux_cpf, #aux_phone, #aux_endereco {
+	display: none;
+}
+
 .forms {
 	width: 550px;
 	height: 400px;
-	margin: 4% 50px 0px 30%;
+	margin: 4% 50px 0px 33%;
 	padding: 50px;
 	background-color: rgba(20,20,20,1);
 	border-radius: 30px;
@@ -35,7 +39,7 @@ body {
 	border-radius: 20px;
 }
 
-.add_morador {
+.editar_morador {
 	width: 200px;
 	height: 40px;
 }
@@ -54,16 +58,16 @@ body {
 	display: inline-block;
 	border-radius: 10px;
 	text-align: center;
-	animation-name: add_morador_efeito;
+	animation-name: aditar_morador_efeito;
 	animation-duration: 4s;
 	opacity: 0;
 }
 
-.added {
+.edited {
 	opacity: 0;
 }
 
-@keyframes add_morador_efeito {
+@keyframes aditar_morador_efeito {
 	
 	0% {
 		opacity: 1;
@@ -78,3 +82,5 @@ body {
 		margin: 0% 0px 0px 55%;
 	}
 }
+
+
