--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -53,10 +53,13 @@ body{
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
+	font-family: Arial;
+	font-weight: bold;
 }
 
 .dropdown_content a:hover {
-	background-color: #f1f1f1
+	background-color: #f1f1f1;
+	text-decoration: none;
 }
 
 .dropdown:hover .dropdown_content {
