--- a/src/pages/moradores/editar/morador.css
+++ b/src/pages/moradores/editar/morador.css
@@ -2,13 +2,13 @@ body {
 	//background-color: rgba(0, 0, 0, 0.1);
 }
 
-#aux_nome, #aux_cpf, #aux_phone, #aux_endereco {
+#aux_field, #aux_nome, #aux_cpf, #aux_phone, #aux_endereco, #aux_recebe {
 	display: none;
 }
 
 .forms {
 	width: 550px;
-	height: 400px;
+	height: 420px;
 	margin: 4% 50px 0px 33%;
 	padding: 50px;
 	background-color: rgba(20,20,20,1);
@@ -26,6 +26,19 @@ body {
 
 .forms input[type="text"]::placeholder {
 	text-align: center;
+}
+
+.forms input[type="checkbox"] {
+	margin: 22px 0px 0px 20px;
+	transform: scale(1.5);
+}
+
+label {
+	color: white;
+	font-family: Arial;
+	font-size: 15px;
+	font-weight: bold;
+	margin: 10px 0px 0px 10px;
 }
 
 .forms input[type="submit"] {
