--- a/src/pages/moradores/inserir/morador.css
+++ b/src/pages/moradores/inserir/morador.css
@@ -4,7 +4,7 @@ body {
 
 .forms {
 	width: 550px;
-	height: 400px;
+	height: 420px;
 	margin: 4% 50px 0px 33%;
 	padding: 50px;
 	background-color: rgba(20,20,20,1);
@@ -22,6 +22,23 @@ body {
 
 .forms input[type="text"]::placeholder {
 	text-align: center;
+}
+
+.forms input[type="checkbox"] {
+	margin: 22px 0px 0px 20px;
+	transform: scale(1.5);
+}
+
+label {
+	color: white;
+	font-family: Arial;
+	font-size: 15px;
+	font-weight: bold;
+	margin: 10px 0px 0px 10px;
+}
+
+input {
+    margin: .4rem;
 }
 
 .forms input[type="submit"] {
