--- a/src/pages/encomendas/editar/editar.css
+++ b/src/pages/encomendas/editar/editar.css
@@ -11,3 +11,37 @@
 	margin: 5% auto;
 	width: 80%;	
 }
+
+.encomenda_excluida_ok {
+	position: relative;
+	float: center;
+	overflow: hidden;
+	font-family: Arial;
+	font-size: 19px;
+	color: white;
+	font-weight: bold;
+	padding: 0px 0px 0px 3%;
+	border-radius: 39px;
+	background-color: green;
+	width: 300px;
+	margin: 10px 10px 10px 43%;
+	opacity: 0;
+	animation-name: encomenda_excluida_ok;
+	animation-duration: 2s;
+}
+
+@keyframes encomenda_excluida_ok {
+	
+	0% {
+		opacity: 1;
+		margin: -1% 10px 10px 43%;
+	}
+	100%  {
+		opacity: 1;
+		margin: 1% 10px 10px 43%;
+	}
+}
+
+#encomenda_status {
+	display: none;
+}
