--- a/src/pages/moradores/inserir/morador.css
+++ b/src/pages/moradores/inserir/morador.css
@@ -12,7 +12,8 @@ body {
 }
 
 .forms input[type="text"] {
-	margin: 10px 0px 0px 10px;
+	width: 450px;
+	margin: 10px 0px 0px 0px;
 	padding: 10px 0px;
 	line-height: 17px;
 	font-size: 15px;
