--- a/src/pages/moradores/editar/morador.css
+++ b/src/pages/moradores/editar/morador.css
@@ -96,4 +96,15 @@ label {
 	}
 }
 
+#botaoSalvar{
+	position: relative;
+	overflow: hidden;
+	font-family: Arial;
+	font-size: 15px;
+	font-weight: bold;
+	margin: 10% 0px 0px 37%;
+	padding: 15px 40px;
+	border-radius: 20px;
+}
+
 
