--- a/src/pages/moradores/editar/formEditar.css
+++ b/src/pages/moradores/editar/formEditar.css
@@ -1,21 +1,13 @@
-body {
-	//background-color: rgba(0, 0, 0, 0.1);
-}
-
-#aux_field, #aux_nome, #aux_cpf, #aux_phone, #aux_endereco, #aux_recebe, #recebedor_id {
-	display: none;
-}
-
-.forms {
+.formEditar {
 	width: 550px;
-	height: 420px;
+	height: 600px;
 	margin: 4% 50px 0px 33%;
 	padding: 50px;
 	background-color: rgba(20,20,20,1);
 	border-radius: 30px;
 }
 
-.forms input[type="text"] {
+.formEditar input[type="text"] {
 	width: 450px;
 	margin: 10px 0px 0px 10px;
 	padding: 10px 0px;
@@ -25,11 +17,11 @@ body {
 	text-align: center;
 }
 
-.forms input[type="text"]::placeholder {
+.formEditar input[type="text"]::placeholder {
 	text-align: center;
 }
 
-.forms input[type="checkbox"] {
+.formEditar input[type="checkbox"] {
 	margin: 22px 0px 0px 20px;
 	transform: scale(1.5);
 }
@@ -42,7 +34,7 @@ label {
 	margin: 10px 0px 0px 10px;
 }
 
-.forms input[type="submit"] {
+.formEditar input[type="submit"] {
 	position: relative;
 	overflow: hidden;
 	font-family: Arial;
@@ -97,5 +89,15 @@ label {
 	}
 }
 
+#botaoSalvar{
+	position: relative;
+	overflow: hidden;
+	font-family: Arial;
+	font-size: 15px;
+	font-weight: bold;
+	margin: 10% 0px 0px 37%;
+	padding: 15px 40px;
+	border-radius: 20px;
+}
 
 
