--- a/src/pages/encomendas/acao/receber/receber.css
+++ b/src/pages/encomendas/acao/receber/receber.css
@@ -4,67 +4,43 @@
 	height: auto;
 	margin: 5% 0px 0px 8%;
 	display: inline-block;
-	/* background-color: rgba(20,20,20,1); */
+}
+
+.hr_top {
+	border: 1px solid orange;
+	border-radius: 5px;
+}
+.encomenda_box, .entregador_box {
+	width: 40%;
+	min-width: 40%;
+	position: relative;
+	margin: 0px 0px 0px 0px;
+	font-family: Arial;
+	font-size: 25px; 
+	color: white;
+	border-style: solid;
+	border-size: 30px;
+	border-color: orange;
+	border-radius: 15px;
+	background-color: rgba(10, 10, 10, 1);
 }
 
 .encomenda_box {
-	width: 40%;
-	min-width: 40%;
-	position: relative;
 	float: right;
-	margin: 0px 0px 0px 10%;
-	padding: 0px 0px 20px 0px;
-	font-size: 25px; 
-	font-family: Arial;
-	color: black;
-	border-style: solid;
-	border-radius: 5px;
-	/* background-color: red; */
+	padding: 0px 0px 20px 0px;	
 }
 
-.entregador_info {
-	width: 40%;
-	min-width: 40%;
-	position: relative;
+.entregador_box {
 	float: left;
-	margin: 0px 50px 50px 10px;
 	padding: 0px 0px 30px 0px;
-	font-size: 25px; 
-	font-family: Arial;
-	color: black;
-	border-style: solid;
-	border-radius: 5px;
 }
 
 .e_info {
-	margin: 0px 0px 0px 10px;
+	position: relative;
+	text-align: center;
+	margin: 10px 0px 0px 10px;
 }
 
-
-/* .encomenda_box { */
-/* 	position: relative; */
-/* 	width: 400px; */
-/* 	height: 160px; */
-/* 	margin: 0px 0px 0px 65%; */
-/* 	font-size: 30px; */
-/* 	font-family: Arial; */
-/* 	color: white; */
-/* 	float: right; */
-/* 	background-color: blue; */
-/* } */
-
-/* .entregador_info { */
-/* 	position: relative; */
-/* 	width: 400px; */
-/* 	height: 160px; */
-/* 	margin: 0px 0px 0px 0%; */
-/* 	font-size: 30px; */
-/* 	font-family: Arial; */
-/* 	color: white; */
-/* 	float: left; */
-/* 	background-color: red; */
-/* } */
-
-
-
-/* padding: 25px 0px px 0px; */
+.encomenda_box {
+	text-align: center;
+}
