--- a/src/pages/moradores/editar/morador.css
+++ b/src/pages/moradores/editar/morador.css
@@ -2,7 +2,7 @@ body {
 	//background-color: rgba(0, 0, 0, 0.1);
 }
 
-#aux_field, #aux_nome, #aux_cpf, #aux_phone, #aux_endereco, #aux_recebe, #recebedor_id {
+#aux_field, #aux_nome, #aux_cpf, #aux_phone, #aux_endereco, #aux_recebe, #aux_password, #recebedor_id {
 	display: none;
 }
 
@@ -15,7 +15,7 @@ body {
 	border-radius: 30px;
 }
 
-.forms input[type="text"] {
+.forms input[type="text"], input[type="password"] {
 	width: 450px;
 	margin: 10px 0px 0px 10px;
 	padding: 10px 0px;
