--- a/src/pages/moradores/inserir/morador.css
+++ b/src/pages/moradores/inserir/morador.css
@@ -4,14 +4,14 @@ body {
 
 .forms {
 	width: 550px;
-	height: 420px;
+	height: 470px;
 	margin: 4% 50px 0px 33%;
 	padding: 50px;
 	background-color: rgba(20,20,20,1);
 	border-radius: 30px;
 }
 
-.forms input[type="text"] {
+.forms input[type="text"], input[type="password"] {
 	width: 450px;
 	margin: 10px 0px 0px 0px;
 	padding: 10px 0px;
