--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -17,6 +17,27 @@ body{
 	display: inline-block;
 }
 
+.logout {
+	position: relative;
+	display: block;
+	margin: -7% 0px 5% 83%;
+	font-family: Arial;
+	font-size: 20px;
+	color: white;
+}
+
+.logout a {
+	font-size: 15px;
+	margin: -3% 0px 0% 0%;
+	display: block;
+	color: white;
+	text-decoration: none;
+}
+
+.logout a:hover {
+	color: orange;
+}
+
 .menu {
 	background-color: rgba(20,20,20,1);
 	position: relative;
